--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,22 @@
     "final-form": "^4.20.10",
     "google-map-react": "^2.2.1",
     "heroku-deploy": "file:..",
-    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-final-form": "^6.5.9",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "^3.0.1",
     "source-map-explorer": "^2.5.3",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "compression": "^1.8.0",
+    "i18next": "^24.2.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "engines": {
@@ -54,8 +60,24 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.22.5",
     "critical": "^7.2.1",
-    "cross-env": "^7.0.3"
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-react": "^7.26.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^9.2.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.48.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-webpack-plugin": "^3.2.0",
+    "shx": "^0.3.4",
+    "source-map-explorer": "^2.5.3",
+    "webpack": "^5.98.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
   }
 }
