--- a/client/package.json
+++ b/client/package.json
@@ -7,28 +7,32 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.2.1",
+    "compression": "^1.8.0",
+    "dompurify": "^3.2.6",
     "dotenv": "^16.4.5",
     "eslint-config-react-app": "^7.0.1",
     "final-form": "^4.20.10",
+    "framer-motion": "^12.23.11",
     "google-map-react": "^2.2.1",
     "heroku-deploy": "file:..",
+    "html-react-parser": "^5.2.6",
+    "i18next": "^24.2.2",
+    "lucide-react": "^0.534.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
     "react-final-form": "^6.5.9",
     "react-google-recaptcha": "^3.1.0",
-    "react-icons": "^5.3.0",
-    "source-map-explorer": "^2.5.3",
-    "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0",
-    "compression": "^1.8.0",
-    "i18next": "^24.2.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.3",
     "web-vitals": "^2.1.4"
   },
   "engines": {
@@ -60,21 +64,25 @@
     ]
   },
   "devDependencies": {
-    "critical": "^7.2.1",
     "@babel/core": "^7.26.8",
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.21",
     "babel-loader": "^9.2.1",
+    "critical": "^7.2.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.48.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-webpack-plugin": "^3.2.0",
+    "postcss": "^8.5.6",
     "shx": "^0.3.4",
     "source-map-explorer": "^2.5.3",
+    "tailwindcss": "^3.4.17",
     "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
